tests/corpus/negative/N05-comprehension/source.py
def doubled(values):
    return [value * 2 for value in values]

